# spending-money-on-apis

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: cborg_api.py  google_api_usage.py  google_maps_example.py
local/: .env.template
src/spending_money_on_apis/: config.py  google_maps.py
tests/: test_config.py  test_google_maps.py
